--- a/public/gate.html
+++ b/public/gate.html
@@ -17,7 +17,7 @@
   <div class="card">
     <h1>Verifica per accedere al link</h1>
     <div id="msg" aria-live="polite"></div>
-    <button id="accessBtn">Accedi al gruppo Telegram</button>
+    <button id="accessBtn">ACCEDI</button>
     <p style="font-size:12px;color:#666;margin-top:12px">Token monouso — valido 5 minuti. Non premere più volte.</p>
   </div>
 
